infrastructure/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    app.kubernetes.io/part-of: saajan-ecommerce
    app.kubernetes.io/managed-by: kustomize
